[package]
name = "voronoids"
version = "0.1.0"
edition = "2021"
authors = ["Kaze Wong <kazewong.physics@gmail.com>"]
description = "A library for generating Voronoi diagrams in parallel in Rust."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kiddo = "4.2.0"
nalgebra = "0.32.4"
